# StoodleyWeather

./: .chromaignore  .gitignore  README.md  package-lock.json  package.json
.clinerules/: .clinerules-typescript.md  .clinerules.md  behaviour.md  search.md
.clinerules/disabled/: api.md  env.md  packages.md  testing.md
_python-files/: config.py  context_bridge_server.py  index_docs.py  index_repos.py  proxy.py  pyproject.toml  rerank.py  server.py  start-all.sh  start-proxy.sh  start-services.sh  update-docs.sh  verify.py
_python-files-xcode/: config.py  docs_server.py  index_docs.py  index_repos.py  proxy.py  server.py  watcher.py
docs/: ADDING-DOCS.md  AI-SETUP-INTRO.md  AI-SETUP.md  ARCHITECTURE.md  AUTO-INDEXING.md  CLINE-PROMPTS.md  GPU-MODELS.md  HYBRID-WORKFLOW.md  LLM-QWEN3.md  MAC-XCODE-ISSUES.md  MONITOR.md  NEW-PROJECT.md  SETUP.md  SINGLE-MACHINE-LINUX.md  SINGLE-MACHINE-MAC.md  SINGLE-MACHINE-WINDOWS.md  WORKFLOW.md
frontend-llmmonitor/: package-lock.json  package.json
frontend-llmmonitor/.next/: trace
frontend-llmmonitor/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend-llmmonitor/app/: layout.tsx  page.tsx
frontend-llmmonitor/lib/: db.ts
src/api/: weather.test.ts  weather.ts
src/app/: compass.tsx  header.tsx  main-content.test.tsx  main-content.tsx  page.tsx
src/components/: SparkLine.tsx  SummitConditions.tsx  TemperatureHeatmap.tsx  WeatherTable.tsx
src/lib/: constants.ts  weather-db.ts  weather-utils.ts
src/types/: types.ts
(+36 files in other folders)
